--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       <tr>
         <th>2024 年</th>
         <td><a href="https://zen.ac.jp/">ZEN大学</a> 入学</td>
+        <img src='ZEN Studyロゴ.png'>
       </tr>
     </table>
   </body>
